# 2year-1sem-coursework-leti

./: .gitignore  .gitmodules  CMakeLists.txt  Coursework.sln  README.md  main.cpp
2year-1sem-coursework-leti/: .gitignore  README.md
2year-1sem-coursework-leti/Coursework/: Archer.h  Farmer.h  Game.cpp  Game.h  Position.h  Resourses.h  Slinger.h  Spearman.h  Warrior.h  add_unit_action.h  base.h  console_helpers.cpp  console_helpers.h  error_action_types.h  error_store.cpp  field.h  field_action_types.h  field_generation_middleware.h  field_object.h  field_objects_store.h  field_store.cpp  field_store.h  field_view.cpp  game_flow_action_types.h  game_view.cpp  gold_mine.h  grass.h  logger_middleware.h  main.cpp  miner_factory.h  movement_validation.h  player_store.cpp  refresh_middleware.h  relic.cpp  relic.h  slinger_factory.h  tower.cpp  unit_action_types.h  unit_actions_middleware.h  unit_selection_menu_view.cpp  (+4 more)
Coursework/: ActionTypes.h  Archer.h  ArcherFactory.h  ArcherStats.h  Coursework.vcxproj  Coursework.vcxproj.filters  ErrorNotificationView.h  ErrorStore.cpp  ErrorStore.h  Farmer.h  FarmerFactory.h  FarmerStats.h  FieldView.cpp  FieldView.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Miner.h  MinerFactory.h  MinerStats.h  Player.h  PlayerStore.cpp  PlayerStore.h  Position.h  Ranger.h  RefreshMiddleware.h  Resourses.h  Slinger.h  SlingerFactory.h  SlingerStats.h  Spearman.h  SpearmanFactory.h  SpearmanStats.h  Swordsman.h  SwordsmanFactory.h  SwordsmanStats.h  Unit.h  UnitFactory.h  UnitManager.h  (+82 more)
Coursework/flux_cpp/: action.h  store.h  (+2 more)
src/: main.cpp
(+1 files in other folders)
